tests/fixtures/pass/stdlib_sys_exit_vm.walrus
import "std/sys";
println("before");
sys.exit(7);
println("after");
