tests/fixtures/fail/stdlib/stdlib_net_invalid_listener_vm.walrus
import "std/net" as net;

net.tcp_accept(999999);
